@@ -567,3 +567,21 @@ footer p {
     padding-right: 2em;
   }
 }
+/* Reposition Live Search Box */
+.LSBox {
+  position: relative;
+}
+#LSResult {
+  z-index: 100;
+  margin: inherit;
+}
+/* Resize embedded PDF viewer */
+object.viewembededfile {
+  height: 1200px;
+  width: 100%;
+}
+/* Align footer images */
+#footer-info img {
+  vertical-align: baseline;
+}
+/* finis */
